# routes/swagger.json
@@ -1,12 +1,18 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My API",
-    "description": "Temple API",
+    "title": "Contacts API",
+    "description": "CSE 341 - Contacts API. Provides CRUD operations for a contacts collection stored in MongoDB.",
     "version": "1.0.0"
   },
   "host": "cse341-project1-os3l.onrender.com",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "Contacts",
+      "description": "Endpoints to create, read, update, and delete contacts."
+    }
+  ],
   "schemes": [
     "https"
   ],
@@ -17,6 +23,16 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -57,7 +73,7 @@
                 "email": {
                   "example": "any"
                 },
-                "favouriteColor": {
+                "favoriteColor": {
                   "example": "any"
                 },
                 "birthday": {
@@ -68,8 +84,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
           },
           "500": {
             "description": "Internal Server Error"
@@ -127,7 +143,7 @@
                 "email": {
                   "example": "any"
                 },
-                "favouriteColor": {
+                "favoriteColor": {
                   "example": "any"
                 },
                 "birthday": {
